[gd_scene load_steps=3 format=3 uid="uid://dgurl1u1gb0ly"]

[ext_resource type="Script" path="res://code/dialog_scene.gd" id="1_435tc"]
[ext_resource type="PackedScene" uid="uid://dvygun7k256ji" path="res://scenes/HudOverlay.tscn" id="1_hnrpo"]

[node name="DialogScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_435tc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerSprite" type="Sprite2D" parent="CanvasLayer"]
z_index = 1
position = Vector2(-650, 1230)

[node name="EnemySprite" type="Sprite2D" parent="CanvasLayer"]
z_index = 1
position = Vector2(2500, 1230)

[node name="BackgroundSprite" type="Sprite2D" parent="CanvasLayer"]
z_index = -1
position = Vector2(960, 540)

[node name="HudOverlay" parent="." instance=ExtResource("1_hnrpo")]
z_index = 10
layout_mode = 1

[connection signal="currentEntity" from="HudOverlay" to="." method="_on_hud_overlay_current_entity"]
[connection signal="dialogCompleted" from="HudOverlay" to="." method="_on_hud_overlay_dialog_completed"]
